<resources>
    <string name="app_name">NextoliveProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBxHbO1QEeBQGERLKtbDcVSaE-LgRmCfeE</string>
    <string name="google_places_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBxHbO1QEeBQGERLKtbDcVSaE-LgRmCfeE</string>
    <string name="please_wait">Please wait…</string>
    <string name="network_error">Network Error</string>
    <string name="something_error">Oops! Something went wrong.</string>
    <string name="search">Search</string>
    <string name="advance_search">Advance Search</string>
    <string name="store">Store</string>
    <string name="resturant">Restaurant</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="Sales">Sales</string>
    <string name="Rates">Rates</string>
    <string name="Submit">Submit</string>
    <string name="food">Food</string>
    <string name="Campaigns">Campaigns</string>
    <string name="online_food_ordering">Online Food Ordering</string>
    <string name="market">Market</string>
    <string name="reservation">Reservation</string>
    <string name="bank">Bank</string>
    <string name="online_queue">Online Queue</string>
    <string name="branch">Branches</string>
    <string name="hotel">Hotel</string>
    <string name="offers">Offers</string>
    <string name="name">Nextolive</string>
    <string name="editProfile">EDIT PROFILE</string>
    <string name="myOrders">MY ORDERS</string>
    <string name="myCarts">MY CART</string>
    <string name="wallet">WALLET</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="myAddresses">My Address</string>
    <string name="contactUs">CONTACT US</string>
    <string name="logout">LOGOUT</string>
    <string name="funFair">Fun Fair</string>
    <string name="tickets">Tickets</string>
    <string name="BankQueueOrder">Bank Queue Order</string>
    <string name="cancel">Cancel</string>
    <string name="Gallery">Gallery</string>
    <string name="Camera">Camera</string>
    <string name="Select_profile_photo">Select profile photo</string>
    <string name="Can_not_find_image_capture_program">Can not find image capture program</string>
    <string name="Error_saving_image">Error in saving image</string>
    <string name="one_hour_delivery">Food 1 hr delivery</string>
    <string name="no_contact_delivery">No-contact delivery available</string>
    <string name="topPicks">Top Picks For You</string>
    <string name="coupons">Coupons For You</string>
    <string name="popularCuisines">Popular cuisines around you</string>
    <string name="InTheSpotlight">In the Spotlight</string>
    <string name="seeAll">SEE ALL</string>
    <string name="explore">Explore sponsored partner brands</string>
    <string name="popularBrands">Popular Brands</string>
    <string name="bestInsafty">Best in Safety</string>
    <string name="tip">Tip your delivery partner</string>
    <string name="thankYour">Thank your delivery partner for helping you stay safe indoors.
        Support them through these tough times with a tip.</string>
    <string name="applycoupons">APPLY COUPONS</string>
    <string name="billDetails">Bill Details</string>
    <string name="itemTotal">Item Total</string>
    <string name="deliverypartner">Delivery partner fee</string>
    <string name="deliveryTip">Delivery Tip</string>
    <string name="addTip">Add tip</string>
    <string name="taxesandCharges">Taxes and Charges</string>
    <string name="toPay">To Pay</string>
    <string name="addAddress">ADD ADDRESS</string>
    <string name="viewDetailed">VIEW DETAILED BILL</string>
    <string name="proceedToPay">PROCEED TO PAY</string>
    <string name="totalDiscount">Total Discount</string>
    <string name="home">Home</string>
    <string name="navigation">Navigation</string>
    <string name="account">Account</string>
    <string name="ecommerce">E-Commerce</string>
    <string name="recharge">Recharge</string>
    <string name="searchFor">Search for restaurant and food</string>
    <string name="popCuisines">Popular Cuisines</string>
    <string name="nextolive">Nextolive</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="choose">Choose an account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="social_large_text">By clicking on a social option you may receive an SMS for verification. Message and data rates may apply.</string>
    <string name="enter_your_code">Enter the 4-digit code sent to you at</string>
    <string name="welcome_back">Welcome back, sign in to continue</string>
    <string name="invalid_phone_number">This phone number is inavlid</string>
    <string name="invalid_password">Wrong password</string>
    <string name="send_otp">Send OTP</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="received_message">Received Message</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="invalid_otp">The SMS passcode you\'ve entered is incorrect.</string>
    <string name="already_have_an_account">Already have an account? <font color='#01C6DB'>Login</font></string>
    <string name="check_correct_mobile_number">Did you enter the correct mobile number?</string>
    <string name="resend_code">Resend code in </string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="change">Change</string>
    <string name="confirmLoc">Comfirm Location</string>
    <string name="turn_on">Turn on</string>
    <string name="signup">Signup</string>
</resources>