<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/orange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/popularCuisines"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopularCuisines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">
        
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/rvHighlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/InTheSpotlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Space
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/seeAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.example.nextoliveproject.Helper.RoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/ic_arrow_forward"
                android:background="@color/orange"/>

        </LinearLayout>

        <TextView
            android:text="@string/explore"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/rvSpotlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/popularBrands"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="Most ordered from around your locality"
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopularBrands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/white"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="10dp"
       android:paddingTop="20dp"
       android:paddingBottom="20dp"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp">
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <TextView
               android:textStyle="bold"
               android:textColor="@color/black"
               android:text="@string/bestInsafty"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
       </LinearLayout>

       <TextView
           android:text="Restaurents with best safety standards"
           android:layout_marginBottom="20dp"
           android:layout_marginRight="20dp"
           android:layout_marginLeft="20dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/rvBestInsafty"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">
        <Button
            android:text="See all restaurants"
            android:textColor="@color/white"
            android:backgroundTint="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

</LinearLayout>