<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:id="@+id/panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:context=".views.SocialActivity">
    <RelativeLayout
        android:id="@+id/rl_close"
        android:background="@color/transparent"
        android:layout_width="match_parent"
        android:layout_height="450dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@color/dark_blue_800"
        android:layout_alignParentBottom="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="true"
        app:behavior_peekHeight="220dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/social_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/allerta"
                    android:text="@string/choose"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <ImageView
                    android:id="@+id/social_close"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/cancel"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/facebook"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/facebook"
                        android:textSize="14sp"
                        android:fontFamily="@font/allerta"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/google_symbol"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/google"
                        android:textSize="14sp"
                        android:fontFamily="@font/allerta"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/social_large_text"
                    android:fontFamily="@font/allerta"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>