<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.login.GetOTPActivity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/main_back"
        android:layout_margin="20dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_arrow_back"/>

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="normal"
        android:fontFamily="@font/allerta"
        android:text="@string/enter_your_code"
        android:textColor="@color/black"
        android:textSize="18sp" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            android:fontFamily="@font/allerta"
            android:text="1234567"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <com.example.nextoliveproject.Helper.OtpEditText
                android:id="@+id/et_otp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="number"
                android:maxLength="4"
                android:textIsSelectable="false"
                android:textSize="20sp"/>
            <LinearLayout
                android:id="@+id/line_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/error_cross"/>
                <TextView
                    android:id="@+id/error"
                    android:text="@string/invalid_otp"
                    android:textSize="14sp"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/allerta"
                    android:textColor="@color/text_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerta"
                    android:text="@string/resend_code"
                    android:textColor="@color/text_hint"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerta"
                    android:text="00:13"
                    android:textColor="@color/text_hint"
                    android:textSize="14sp"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nextPage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:background="@color/dark_blue_800"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/allerta"
            android:text="Next"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>